Fixing broken layout when routine name too long

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 html, body {
     font-family: Arial,sans-serif;
-    min-width: 350px;
     padding: 0;
     margin: 0;
 }
@@ -92,26 +91,28 @@ a {
 }
 
 .routine {
-    padding: 10px 0;
-    height: 30px;
-    line-height: 30px;
+    padding: 10px 40px 10px 40px;
+    position: relative;
 }
 
 .state {
-    float: left;
+    position: absolute;
     width: 30px;
     height: 30px;
     cursor: pointer;
     margin-right: 10px;
+    top: 7px;
+    left: 0px;
 }
 
 .name {
-    float: left;
+    line-height: 24px;
 }
 
 .days {
-    float: right;
-    padding: 0 10px;
+    position: absolute;
+    top: 10px;
+    right: -2px;
 }
 
 .skip {
